tests/NormalTests/paczka2/big_fuzzy/80395808.err
Error in line 2: BrSeZlA S699 0,3
Error in line 4: BrSeZlA A895 89,8
Error in line 11: eW0RzXG S612 33,3
Error in line 17: QTrO1uljwDo S782 87,8
Error in line 30: S612 S699 60,7
Error in line 23: 7dc934 A895 23,0
Error in line 37: QTrO1uljwDo S699 2,0
Error in line 35: 7dc934 S782 98,2
Error in line 58: BrSeZlA S699 -4,4
Error in line 56: BrSeZlA S699 71,1
Error in line 59: BrSeZlA S782 61,7
Error in line 75: S612 S699 22,8
Error in line 67: vLD A895 65,3
Error in line 97: BrSeZlA S612 53,5
Error in line 107: 7dc934 A895 39,2
Error in line 111: eW0RzXG S782 965,4
Error in line 115: BrSeZlA A895 405,0
Error in line 122: BrSeZlA S699 83,3
Error in line 126: BrSeZlA S782 72,0
Error in line 120: 7dc934 A895 53,7
Error in line 135: vLD A895 45,0
Error in line 164: eW0RzXG S699 0,0
Error in line 167: eW0RzXG A895 7,1
Error in line 183: eW0RzXG S699 52,0
Error in line 188: eW0RzXG SQ12 2Q,4
Error in line 180: QTrO1uljwDo S612 16,9
Error in line 187: eW0RzXG A895 86,4
Error in line 200: QTrO1uljwDo S612 90,4
Error in line 203: BrSeZlA S699 14,7
Error in line 192: vLD S699 652,3
Error in line 205: 7dc934 S782 16,0
Error in line 207: vLD A895 21,6
Error in line 224: vLD S612 5,42
Error in line 230: BQzlxbmF S612 67,3
Error in line 238: vLD S612 14,63
